[gd_scene load_steps=13 format=3 uid="uid://bqmoxujoid7bj"]

[ext_resource type="Script" uid="uid://c7m2qqx6fi7xj" path="res://Scenes/Maintenance/Maintenance.gd" id="1_nwku6"]
[ext_resource type="Texture2D" uid="uid://f8tkyibvwaul" path="res://Assets/Basement.png" id="2_24gcr"]
[ext_resource type="Texture2D" uid="uid://8i1jk7nasydo" path="res://Assets/Rooms/Maintenance.png" id="3_5gi4c"]
[ext_resource type="Shader" uid="uid://d2j2u4n6ve7oc" path="res://PropOutlineAndInsideGlow.gdshader" id="4_yo1he"]
[ext_resource type="Texture2D" uid="uid://b2c3xvmrm4xb7" path="res://Assets/Props/Management.png" id="5_3x475"]
[ext_resource type="Texture2D" uid="uid://dy64faa4dm4jg" path="res://Assets/Props/TechTree.png" id="6_j7m07"]
[ext_resource type="Texture2D" uid="uid://2mdbhlwtnca1" path="res://Assets/Props/Inspect.png" id="7_u24gb"]
[ext_resource type="Texture2D" uid="uid://cvaluecwkcgy4" path="res://Assets/Props/Tower.png" id="8_7cufn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sd6mi"]
shader = ExtResource("4_yo1he")
shader_parameter/outline_enabled = false
shader_parameter/glow_enabled = false
shader_parameter/outline_size = 2.0
shader_parameter/outline_color = Color(2.11775e-06, 0.809929, 0.41254, 1)
shader_parameter/pulse_speed = 2.0
shader_parameter/min_opacity = 0.4
shader_parameter/size_pulse_strength = 0.3
shader_parameter/glow_color = Color(0.945, 0, 0.606, 0.5)
shader_parameter/glow_strength = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hg1r"]
shader = ExtResource("4_yo1he")
shader_parameter/outline_enabled = false
shader_parameter/glow_enabled = false
shader_parameter/outline_size = 2.0
shader_parameter/outline_color = Color(2.11775e-06, 0.809929, 0.41254, 1)
shader_parameter/pulse_speed = 2.0
shader_parameter/min_opacity = 0.4
shader_parameter/size_pulse_strength = 0.3
shader_parameter/glow_color = Color(0.945, 0, 0.606, 0.5)
shader_parameter/glow_strength = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xgg6g"]
shader = ExtResource("4_yo1he")
shader_parameter/outline_enabled = false
shader_parameter/glow_enabled = false
shader_parameter/outline_size = 2.0
shader_parameter/outline_color = Color(2.11775e-06, 0.809929, 0.41254, 1)
shader_parameter/pulse_speed = 2.0
shader_parameter/min_opacity = 0.4
shader_parameter/size_pulse_strength = 0.3
shader_parameter/glow_color = Color(0.945, 0, 0.606, 0.5)
shader_parameter/glow_strength = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xugvy"]
shader = ExtResource("4_yo1he")
shader_parameter/outline_enabled = false
shader_parameter/glow_enabled = false
shader_parameter/outline_size = 2.0
shader_parameter/outline_color = Color(2.11775e-06, 0.809929, 0.41254, 1)
shader_parameter/pulse_speed = 2.0
shader_parameter/min_opacity = 0.4
shader_parameter/size_pulse_strength = 0.3
shader_parameter/glow_color = Color(0.945, 0, 0.606, 0.5)
shader_parameter/glow_strength = 0.2

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nwku6")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_24gcr")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(0.635, 0.635)
texture = ExtResource("3_5gi4c")

[node name="TowerImage" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_sd6mi")
layout_mode = 0
offset_left = 160.0
offset_top = 126.0
offset_right = 409.0
offset_bottom = 521.0
scale = Vector2(0.635, 0.635)
texture = ExtResource("5_3x475")

[node name="ManagementImage" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_6hg1r")
layout_mode = 0
offset_left = 722.0
offset_top = 97.0
offset_right = 971.0
offset_bottom = 492.0
scale = Vector2(0.635, 0.635)
texture = ExtResource("6_j7m07")

[node name="InspectionImage" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_xgg6g")
layout_mode = 0
offset_left = 426.0
offset_top = 16.0
offset_right = 675.0
offset_bottom = 411.0
scale = Vector2(0.635, 0.635)
texture = ExtResource("7_u24gb")

[node name="TechTreeImage" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_xugvy")
layout_mode = 0
offset_left = 404.0
offset_top = 212.0
offset_right = 1100.0
offset_bottom = 610.0
scale = Vector2(0.635, 0.635)
texture = ExtResource("8_7cufn")

[node name="ContentContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 31.0
offset_right = 1128.0
offset_bottom = 632.0
mouse_filter = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 45.0
offset_bottom = 31.0
text = "Back"
